--- a/package.json
+++ b/package.json
@@ -9,6 +9,28 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
-  }
+    "vite": "^4.5.9"
+  },
+  "description": "les slides du cours réseau / backend à l'École des Mines de Paris",
+  "dependencies": {
+    "esbuild": "^0.18.20",
+    "fsevents": "^2.3.3",
+    "nanoid": "^3.3.8",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.5.1",
+    "rollup": "^3.29.5",
+    "source-map-js": "^1.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ue22-p24/backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ue22-p24/backend/issues"
+  },
+  "homepage": "https://github.com/ue22-p24/backend#readme",
+  "main": "vite.config.js"
 }
